# mp2lab5

./: CMakeLists.txt  README.md
StackLib/: CMakeLists.txt  stack.h
TextLib/: text.h  text_node.cpp  text_node.h
main/: main.cpp
test/: test_Text.cpp
